--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(160deg, #0d1b2a, #1b263b, #415a77);
+      background: linear-gradient(160deg, #a12d2d, #1b263b, #b7a851);
       color: #fff;
       margin: 0;
       padding: 0;
